# ordec

./: .dockerignore  .gitignore  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  REUSE.toml  base.Dockerfile  pyproject.toml  pytest.ini  setup.py
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: base.yaml  build.yaml  tests.yaml
benchmarks/: __init__.py  checksum.py  equivalence.py  html.py  memory.py  prng.py  report.py  runner.py  schema.py
benchmarks/workloads/: __init__.py  layout_flatten.py  micro.py  render_scan.py  sim_hierarchy.py  snapshot_chain.py  symbol_build.py
docs/: Makefile  conf.py  editor_support.rst  getting_started.rst  howto_layout.rst  index.rst  ord_tutorial.py  related_projects.rst  requirements.txt  webui.rst
docs/cell_lib/: base.py  base.rst  generic_mos.rst  ihp130.rst  index.rst  sky130.rst
docs/dev/: containers_and_ci.rst  design_decisions.rst  hub.rst  index.rst  ipython_integration.rst  lsp.rst  ngspice_pipe_mode.rst  ordb_benchmark_workloads.rst  ordb_benchmarks.rst  setup.rst  todos.rst  view_generation.rst  webui.rst  zigbridge.rst
docs/ref/: arrange.rst  cell_and_generate.rst  constraints.rst  extlibrary.rst  geoprim.rst  index.rst  layout.rst  layout_klayout.rst  ord.rst  ord1.rst  ord2.rst  ord_tutorial.py  ordb.rst  ordb_demo.py  placement.rst  pnr.rst  rational.rst  schema.rst
docs/tutorials/: index.rst
editors/: .gitignore
editors/sublime/: Ord.sublime-syntax
editors/tree-sitter-ord/: LICENSE.md  README.md  grammar.js
examples/: JupyterExample.py  README.md  example_rc_filter.py  interactive_rc_circuit.py  opamp.ord
examples/demo/: counter.v  counter_yosys.py  gen_all.py  run_drc.py  srouter.py  top.ord  vco_pseudodiff.ord  vco_pseudodiff.py  vco_pseudodiff_ord.ord  vco_pseudodiff_ref.py
examples/dev/: README.md  layout.py  myinv.py  render2.py
examples/interactive_rc_circuit/: README.md  interactive_rc_circuit.py  widgets.py
hub/: Dockerfile  docker-compose.yml  example.env  hub.Dockerfile  jupyterhub_config.py
hub/deploy/: Caddyfile  host-setup.sh
hub/templates/: login.html  page.html
ordec/: __init__.py  __main__.py  base.py  cell.py  extlibrary.py  geoprim.py  helpers.py  hub.py  importer.py  jobrunner.py  language.py  layout.py  lef_in.py  ordb.py  rational.py  render.py  render2.py  report.py  routing.py  schema.py  server.py  sim.py  sphinx_ext.py  version.py  widgets.py  ws_server.py
ordec/analysis/: __init__.py  completions.py  diagnostics.py  model.py  ord.py  ord2.py  parser_pass.py  python_index.py  rename.py  session.py  typeflow.py
ordec/core/: __init__.py  arrange.py  cell.py  constraints.py  context.py  directory.py  genrun.py  geoprim.py  ordb.py  placement.py  rational.py  schema.py  simarray.py  viewctx.py
ordec/examples/: amp.ord  amp.uistate.json  currentmirror.ord  currentmirror.uistate.json  diffpair.ord  diffpair.uistate.json  nand2.ord  nand2.uistate.json  rc_curve.py  rc_curve.uistate.json  starved_ringosc.ord  starved_ringosc.uistate.json  stdcells.ord  stdcells.uistate.json  vco_pseudodiff.ord  vco_pseudodiff.uistate.json  voltagedivider.ord  voltagedivider.uistate.json  voltagedivider_py.py
ordec/layout/: __init__.py  drc.py  gds_in.py  gds_out.py  helpers.py  ihp130.py  ihp_pnr.py  klayout.py  lvs.py  lvsdb.lark  makevias.py  pnr.py  rdb_value.lark  read_gds.py  srouter.py  webdata.py
ordec/lib/: __init__.py  base.py  generic_mos.py  ihp130.py  ihp130_stdcells.py  pdk_common.py  schem_sim_ihp130_test.py  schem_sim_sky130_test.py  schem_sim_test.py  sky130.py  test.py  test_ffi.py
ordec/lsp/: __init__.py  code_actions.py  server.py
ordec/ord/: __init__.py  context.py  ord.lark  ord_transformer.py  parser.py  python_transformer.py
ordec/ord1/: __init__.py  ast_conversion.py  ast_transformer.py  implicit_processing.py  lark_transformer.py  optimize_position.py  ord_grammar.lark  parser.py  prelim_schem_instance.py
tests/: conftest.py  golden_helpers.py  reference_ord_output.py  test_analysis_ord.py  test_analysis_ord2.py  test_base.py  test_benchmarks.py  test_benchmarks_smoke.py  test_cell.py  test_course.py  test_drc_schema.py  test_editor_grammars.py  test_genrun.py  test_geoprim.py  test_hub.py  test_ihp130_drc_hier.py  test_ihp130_inv.py  test_ihp130_lvs_hier.py  test_ihp130_passives.py  test_ihp130_stdcells.py  test_ipython.py  test_jobrunner.py  test_layout.py  test_layout_constraints.py  test_layout_drc.py  test_lef_in.py  test_lsp_server.py  test_ord.py  test_ord2_compiler.py  test_ord2_runtime.ord  test_ord_compiler.py  test_ord_runtime.ord  test_ordb.py  test_ordb_generic_mos.py  test_parse_lvsdb.py  test_parser.py  test_pnr.ord  test_pnr.py  test_rational.py  test_renderview.py  (+29 more)
web/: app.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
xordb/: Cargo.toml  README.md  pyproject.toml
xordb/src/: attr.rs  geoprim.rs  index.rs  lib.rs  rational.rs  schema.rs  store.rs  subgraph.rs  symbol.rs
zig/: README.md  build.zig  build.zig.zon
(+367 files in other folders)
