[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ordec"
maintainers = [
  {name = "Tobias Kaiser", email = "kaiser@tu-berlin.de"}
]
description = "ORDeC"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "PyGObject>=3.42.2",
    "pyrsistent>=0.18.1",
    "pycairo>=1.20.1",
    "lark>=1.1.5",
    "astor>=0.8.1",
    "numpy>=1.24.2",
    "scipy>=1.10.1",
    "atpublic>=6.0.1",
    # "ipython>=8.5.0",
    "websockets>=15.0.1",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
]
extra = [
    "black>=23.1.0",
]

[tool.setuptools]
packages = ["ordec"]

[project.scripts]
ordec-server =  "ordec.ws_server:main"


