# SPDX-FileCopyrightText: 2025 ORDeC contributors
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ordec"
maintainers = [
  {name = "Tobias Kaiser", email = "kaiser@tu-berlin.de"}
]
description = "ORDeC"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyrsistent>=0.18.1",
    "lark>=1.1.5",
    "astor>=0.8.1",
    "numpy>=1.24.2",
    "scipy>=1.10.1",
    "atpublic>=6.0.1",
    "websockets>=15.0.1",
    "tabulate>=0.8.9",
    "inotify-simple>=1.3.0",
]
dynamic = ["version"]
license = "Apache-2.0"
license-files = [
    "REUSE.toml",
    "LICENSES/Apache-2.0.txt",
    "LICENSES/OFL-1.1.txt",
    "LICENSES/CC0-1.0.txt",
]

[project.urls]
Homepage = "https://github.com/tub-msc/ordec"
Documentation = "https://ordec.readthedocs.io"

[project.optional-dependencies]
test = [
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "selenium>=4.8.3",
]
extra = [
    "black>=23.1.0",
]

[project.scripts]
ordec-server =  "ordec.server:main"

[tool.setuptools]
packages = [
    "ordec",
    "ordec.lib",
    "ordec.lib.examples",
    "ordec.lib.ord_test",
    "ordec.ord1",
    "ordec.sim2",
]

[tool.setuptools.package-data]
"ordec" = ["webdist.tar"]
"ordec.lib.examples" = ["*.json"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
